--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,12 +3,30 @@
 .radius {
   border-radius: 10px;
 }
-body {
-  background-image: url('src/assets/background.png');
+.back-image {
+  background-image: url('src/assets/back.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
 }
+.img1 {
+  background-image: url('/src/assets/img.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+body {
+  background-image: url('src/assets/back.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+// body {
+//   background-image: url('src/assets/background.png');
+//   background-position: center;
+//   background-repeat: no-repeat;
+//   background-size: cover;
+// }
 a {
   color: black;
   text-decoration: none;
