--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -3,11 +3,23 @@
 .radius {
   border-radius: 10px;
 }
+.r-radius {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+.t-radius {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
 .back-image {
   background-image: url('src/assets/back.png');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+.rtl {
+  direction: rtl;
 }
 .img1 {
   background-image: url('/src/assets/img.png');
